:ambulance: fix auth forms alignment

--- a/UI/assets/scss/style.scss
+++ b/UI/assets/scss/style.scss
@@ -206,6 +206,7 @@ hr {
   align-items: center;
   justify-content: center;
   margin-top: 70px;
+  flex-grow: 10;
 }
 
 // AUTH WRAPPER
